# UGFX_Win_Emulator

./: CMakeLists.txt  README.md  workspace.code-workspace
.gitea/workflows/: build.yml
.github/workflows/: build.yml  release.yml
Components/CP1251_Converter/: CMakeLists.txt
Components/CP1251_Converter/Inc/: cp1251_converter.hpp
Components/CP1251_Converter/Src/: cp1251_converter.cpp
Components/UGFX/: CMakeLists.txt
Components/UGFX/Config/: gfxconf.h
Components/UGFX/Extended/: gfx_extended.h  gfx_mk_extended.c
Components/UGFX/RomFiles/: courbd16.h  courbd20.h  romfs_files.h  userfonts.h
Components/UGFX/RomFiles/Arrays/: menu_display.h  menu_exit.h  menu_timedate.h
Components/UGFX/ugfx_2.9/src/gdisp/: gdisp_rules.h
Components/UGFX/ugfx_2.9/src/gwin/: gwin_wm.c
Components/UGFX_GuiApp/: CMakeLists.txt
Components/UGFX_GuiApp/Inc/: UGFX_AppTimer.hpp  UGFX_GuiAppAnimationBase.hpp  UGFX_GuiAppBase.hpp  UGFX_PresenterBase.hpp  UGFX_ScreenBase.hpp  UGFX_ViewBase.hpp
Components/UGFX_GuiApp/Src/: UGFX_GuiAppAnimationBase.cpp  UGFX_GuiAppBase.cpp
Core/Inc/: GUI_App.hpp  IMainPresenter.hpp  MainPresenter.hpp  MainScreen.hpp  Model.hpp  Screen2.hpp  Screen2Presenter.hpp
Core/Src/: GUI_App.cpp  main.cpp
CustomWidgetsExample/Inc/: GWidgetLayout.hpp  Label.hpp  ScrollMenuContainer.hpp  SpinBox.hpp  TinyLabel.hpp  TransparentPainter.hpp  fonts.h  pictures.h
CustomWidgetsExample/Src/: Label.cpp  ScrollMenuContainer.cpp  TinyLabel.cpp  TransparentPainter.cpp  fonts.c  pictures.c
